--- a/src/main/resources/templates/admin/schedules/index.html
+++ b/src/main/resources/templates/admin/schedules/index.html
@@ -45,7 +45,7 @@
 			{
 			    border-radius: 2px;
 			    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-			    background-color: blue;
+			    background-color: #99c70d;
 			}
 	    	
 	    	.calendar{
@@ -79,6 +79,11 @@
 	    		height: 80%;
 	    		max-height: 120px;
 	    	}
+	    	.topDivNo{
+	    		height: 100%;
+	    		width: 100%;
+	    		background-color: #272626;
+	    	}
 	    	.buttonDivScroll{
 	    		height: 100%;
 	    	}
@@ -91,18 +96,33 @@
 	    		height: 60px;
 	    		margin-top: 5px;
 	    		margin-left: 0px;
+	    		background-color: #daef9a;
+	    		border-radius: 5px;
 	    	}
 	    	.smallAdd{
-	    		width: 5%;
+	    		width: 7.5%;
 	    		height: 100%;
 	    		float: left;
-	    		background-color: #04ef29;
 	    	}
-	    	.smallContent{
-	    		width: 95%;
+	    	.smallDel{
+	    		width: 7.5%;
 	    		height: 100%;
 	    		float: right;
-	    		background-color: #fbf349;
+	    	}
+	    	.addImg{
+	    		height: 20px;
+	    		margin-top: 20px;
+	    	}
+	    	.delImg{
+	    		height: 20px;
+	    		margin-top: 20px;
+	    	}
+	    	
+	    	.smallContent{
+	    		width: 85%;
+	    		height: 100%;
+	    		float: right;
+	    		background-color: #cccccc45;
 	    	}
 	    	.smallContentDiv{
 	    		width: 95%;
@@ -110,6 +130,8 @@
 	    		margin-left: 2.5%;
 	    		margin-right: 2.5%;
 	    		margin-top: 2.5%;
+	    		color: #057dca;
+	    		font-family: 宋体;
 	    	}
 	    	.topDiv1{
 		    	width: 70%;
@@ -118,6 +140,9 @@
 	    	.topDiv2{
 		    	width: 30%;
 		    	float: right;
+	    	}
+	    	.topDiv1Day{
+	    		margin-left: 12px;
 	    	}
 	    	.topDiv2Add{
 	    		width: 20px;
@@ -213,7 +238,7 @@
 							var top = "";
 							var buttonDivScrollSmallDiv = "";
 							if(dayID != ''){
-								top = "<div class='topDiv'><div class='topDiv1'>" + dayID + "</div><div class='topDiv2'><div class='topDiv2Add' id='topDiv2Add' name=" + dayID + ">+</div></div></div>";
+								top = "<div class='topDiv'><div class='topDiv1'><div class='topDiv1Day'>" + dayID + "</div></div><div class='topDiv2'><div class='topDiv2Add' id='topDiv2Add' name=" + dayID + ">+</div></div></div>";
 								var currentDayData = data[parseInt(dayID) - 1].schedules;
 								if(currentDayData.length > 0){
 									buttonDivScrollSmallDiv = "<div class='buttonDivScrollYes'>";
@@ -221,11 +246,13 @@
 										var id = currentDayData[k].id;
 										var content = currentDayData[k].title + " " + currentDayData[k].runTime.split(" ")[1];
 										buttonDivScrollSmallDiv = buttonDivScrollSmallDiv + 
-										"<div class='buttonDivScrollSmall'><div class='smallAdd' id='smallAdd' name=" + id + "></div><div class='smallContent'><div class='smallContentDiv'>" + content + "</div></div></div>";
+										"<div class='buttonDivScrollSmall'><div class='smallAdd' id='smallAdd' name=" + id + "><img src='/admin/img/addNew.png' class='addImg' id='smallAdd' name=" + id + " /></div><div class='smallDel' id='smallDel' name=" + id + "><img src='/admin/img/Del.png' class='delImg' id='smallDel' name=" + id + " /></div><div class='smallContent'><div class='smallContentDiv'>" + content + "</div></div></div>";
 									}
 									buttonDivScrollSmallDiv = buttonDivScrollSmallDiv + "</div>";
 								}
 								
+							}else{
+								top = "";
 							}
 							var button = "<div class='buttonDiv'><div class='buttonDivScroll'>" + 
 								buttonDivScrollSmallDiv +
@@ -332,9 +359,9 @@
 				if(day != ""){
 					layer.open({
 		                type: 2,
-		                title: '新增',
+		                title: '新增排期',
 		                skin: 'layui-layer-rim',
-		                area: ['100%', '100%'],
+		                area: ['60%', '80%'],
 		                content: 'add?date='+ day
 		            });
 				}
@@ -345,12 +372,18 @@
 				if(id != ""){
 					layer.open({
 		                type: 2,
-		                title: '更新',
+		                title: '更新排期',
 		                skin: 'layui-layer-rim',
-		                area: ['100%', '100%'],
+		                area: ['60%', '80%'],
 		                content: 'update?id='+ id
 		            });
 				}
+			}
+			
+			if(e.target.id == "smallDel")
+			{
+				var id = e.target.attributes.name.value;
+				window.location.href = "del?id=" + id;
 			}
 			
 		});
