--- a/src/main/resources/templates/admin/art/update.html
+++ b/src/main/resources/templates/admin/art/update.html
@@ -61,9 +61,9 @@
 	                        	<div class="form-group">
 	                                <label class="col-sm-2 control-label">编号</label>
 	                                <div class="col-sm-10">
-	                                    <input disabled="" class="form-control" type="text" th:value="${art.id}">
+	                                    <input disabled="disabled" class="form-control" type="text" th:value="${art.id}">
 	                                    <input class="form-control" type="hidden"  name="id" th:value="${art.id}">
-	                                    <input class="form-control" type="hidden"  name="statuses" th:value="${art.statuses}">
+	                                    <!-- <input class="form-control" type="hidden"  name="statuses" th:value="${art.statuses}"> -->
 	                                </div>
 	                            </div>
                                 <div class="hr-line-dashed"></div>
@@ -222,9 +222,25 @@
 	                            <div class="form-group">
 	                                <label class="col-sm-2 control-label">资源更新时间</label>
 	                                <div class="col-sm-10">
-	                                    <input disabled="" class="form-control" type="text" th:value="${art.updateTime}">
+	                                    <input disabled="disabled" class="form-control" type="text" th:value="${art.updateTime}">
 	                                </div>
 	                            </div>
+	                            
+	                            <div class="hr-line-dashed"></div>
+	                            <div class="form-group">
+	                                <label class="col-sm-2 control-label">是否发布</label>
+	                                <div class="col-sm-10">
+	                                    <select class="form-control m-b" name="statuses" th:if="${art.statuses} eq '0'">
+                                        	<option value="0" selected="selected">否</option>
+                                        	<option value="1">是</option>
+                                    	</select>
+                                    	<select class="form-control m-b" name="statuses" th:if="${art.statuses} eq '1'">
+                                        	<option value="0">否</option>
+                                        	<option value="1" selected="selected">是</option>
+                                    	</select>
+	                                </div>
+	                            </div>
+	                            
 	                            <div class="hr-line-dashed"></div>
 	                            <div class="form-group">
 	                                <div class="col-sm-4 col-sm-offset-2">
